# pndapetzim

./: README.md  black.sh  flake8.sh  isort.sh  pychecks.sh  pyproject.toml
notebooks/: eda.ipynb  train_amount_date_model.ipynb  train_large_model.ipynb  train_small_model.ipynb
pndapetzim/: data.py  model.py  models.py
tests/: test_data.py  test_model.py  test_models.py  test_pndapetzim.py
