[tool.poetry]
name = "pndapetzim"
version = "0.1.0"
description = ""
authors = ["Grigory Bordyugov <gregbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.18.0"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
